grammar/.antlr/JupitoreParser.java
// Generated from c:/Users/jlmug/OneDrive/Desktop/Released_Dimidium/SyntaxN/grammar/Jupitore.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class JupitoreParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, TITLE=11, MEND=12, HOME=13, MOVE=14, DIRECTION=15, HEAT=16, TARGET=17, 
		LEVEL=18, CALL=19, IF=20, ENDIF=21, REPEAT=22, BREPEAT=23, END=24, SIN=25, 
		COS=26, TAN=27, SQRT=28, PI=29, ABS=30, SIGN=31, PAUSE=32, RESPOND=33, 
		RESUME=34, SET_HEATER=35, WAITFORTEMP=36, DWELL=37, MOVEEX=38, MSG=39, 
		ABSOLUTE=40, ARROW=41, RELATIVE=42, TIMEOUT_SET=43, RELATIVEEXTRUSION=44, 
		LOAD_BED_MESH=45, SET_PRESSURE_ADVANCE=46, RESET_EXTRUDER=47, BED_MESH_CALIBRATE=48, 
		PROBE_CALIBRATE=49, COOLDOWN=50, SET_SPEED=51, SET_FAN=52, PRINTFILE=53, 
		SET_NOZZLE=54, SET_FILAMENT=55, SET_LAYER_HEIGHT=56, SET_EXTRUSION_MULTIPLIER=57, 
		LAYER=58, ENABLE_AUTO_EXTRUDE=59, PLUSEQ=60, MINUSEQ=61, MULTEQ=62, DIVEQ=63, 
		EQUALS=64, PLUS=65, MINUS=66, COMPARE=67, NUMBER=68, STRING=69, SEMICOLON=70, 
		NEWLINE=71, WS=72, X=73, Y=74, Z=75, E=76, COMMENT=77, ID=78, UNRECOGNIZED=79;
	public static final int
		RULE_program = 0, RULE_macro = 1, RULE_statement = 2, RULE_repeat_statement = 3, 
		RULE_brepeat_statement = 4, RULE_layer_statement = 5, RULE_statement_block = 6, 
		RULE_if_statement = 7, RULE_coordList = 8, RULE_coord = 9, RULE_expr = 10, 
		RULE_func = 11, RULE_condition = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "macro", "statement", "repeat_statement", "brepeat_statement", 
			"layer_statement", "statement_block", "if_statement", "coordList", "coord", 
			"expr", "func", "condition"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'S'", "'s'", "'MS'", "'ms'", "'('", "')'", "'^'", "'*'", "'/'", 
			"'i'", "'M.title'", "'M.end'", "'Home'", "'Move'", null, "'Heat'", null, 
			"'Level'", "'M.call'", "'if'", "'endif'", "'repeat'", "'Brepeat'", "'end'", 
			"'sin'", "'cos'", "'tan'", "'sqrt'", "'pi'", "'abs'", "'sign'", null, 
			null, null, "'Set_Heater_Temperature'", "'WaitForTemp'", "'Dwell'", "'MoveTo'", 
			"'MSG'", "'Absolute'", "'->'", "'Relative'", "'TIMEOUT_SET'", "'RelativeExtrusion'", 
			null, null, "'ResetExtruder'", null, null, null, "'SetSpeed'", "'SetFan'", 
			"'PRINTFILE'", "'SetNozzle'", "'SetFilament'", "'SetLayerHeight'", "'SetExtrusionMultiplier'", 
			"'Layer'", "'EnableAutoExtrude'", "'+='", "'-='", "'*='", "'/='", "'='", 
			"'+'", "'-'", null, null, null, "';'", null, null, "'x'", "'y'", "'z'", 
			"'e'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "TITLE", 
			"MEND", "HOME", "MOVE", "DIRECTION", "HEAT", "TARGET", "LEVEL", "CALL", 
			"IF", "ENDIF", "REPEAT", "BREPEAT", "END", "SIN", "COS", "TAN", "SQRT", 
			"PI", "ABS", "SIGN", "PAUSE", "RESPOND", "RESUME", "SET_HEATER", "WAITFORTEMP", 
			"DWELL", "MOVEEX", "MSG", "ABSOLUTE", "ARROW", "RELATIVE", "TIMEOUT_SET", 
			"RELATIVEEXTRUSION", "LOAD_BED_MESH", "SET_PRESSURE_ADVANCE", "RESET_EXTRUDER", 
			"BED_MESH_CALIBRATE", "PROBE_CALIBRATE", "COOLDOWN", "SET_SPEED", "SET_FAN", 
			"PRINTFILE", "SET_NOZZLE", "SET_FILAMENT", "SET_LAYER_HEIGHT", "SET_EXTRUSION_MULTIPLIER", 
			"LAYER", "ENABLE_AUTO_EXTRUDE", "PLUSEQ", "MINUSEQ", "MULTEQ", "DIVEQ", 
			"EQUALS", "PLUS", "MINUS", "COMPARE", "NUMBER", "STRING", "SEMICOLON", 
			"NEWLINE", "WS", "X", "Y", "Z", "E", "COMMENT", "ID", "UNRECOGNIZED"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Jupitore.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JupitoreParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<MacroContext> macro() {
			return getRuleContexts(MacroContext.class);
		}
		public MacroContext macro(int i) {
			return getRuleContext(MacroContext.class,i);
		}
		public TerminalNode EOF() { return getToken(JupitoreParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(JupitoreParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(JupitoreParser.NEWLINE, i);
		}
		public List<TerminalNode> WS() { return getTokens(JupitoreParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(JupitoreParser.WS, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JupitoreListener ) ((JupitoreListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JupitoreListener ) ((JupitoreListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE || _la==WS) {
				{
				{
				setState(26);
				_la = _input.LA(1);
				if ( !(_la==NEWLINE || _la==WS) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(31);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(32);
			macro();
			setState(42);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(36);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==NEWLINE || _la==WS) {
						{
						{
						setState(33);
						_la = _input.LA(1);
						if ( !(_la==NEWLINE || _la==WS) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						}
						}
						setState(38);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(39);
					macro();
					}
					} 
				}
				setState(44);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE || _la==WS) {
				{
				{
				setState(45);
				_la = _input.LA(1);
				if ( !(_la==NEWLINE || _la==WS) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(51);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MacroContext extends ParserRuleContext {
		public TerminalNode TITLE() { return getToken(JupitoreParser.TITLE, 0); }
		public TerminalNode STRING() { return getToken(JupitoreParser.STRING, 0); }
		public TerminalNode MEND() { return getToken(JupitoreParser.MEND, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(JupitoreParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(JupitoreParser.NEWLINE, i);
		}
		public List<TerminalNode> WS() { return getTokens(JupitoreParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(JupitoreParser.WS, i);
		}
		public MacroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_macro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JupitoreListener ) ((JupitoreListener)listener).enterMacro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JupitoreListener ) ((JupitoreListener)listener).exitMacro(this);
		}
	}

	public final MacroContext macro() throws RecognitionException {
		MacroContext _localctx = new MacroContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_macro);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(TITLE);
			setState(54);
			match(STRING);
			setState(56); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(55);
				_la = _input.LA(1);
				if ( !(_la==NEWLINE || _la==WS) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(58); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE || _la==WS );
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1152918751547318272L) != 0)) {
				{
				{
				setState(60);
				statement();
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(66);
			match(MEND);
			setState(70);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(67);
					_la = _input.LA(1);
					if ( !(_la==NEWLINE || _la==WS) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					} 
				}
				setState(72);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public TerminalNode HOME() { return getToken(JupitoreParser.HOME, 0); }
		public TerminalNode NEWLINE() { return getToken(JupitoreParser.NEWLINE, 0); }
		public TerminalNode ARROW() { return getToken(JupitoreParser.ARROW, 0); }
		public CoordListContext coordList() {
			return getRuleContext(CoordListContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(JupitoreParser.SEMICOLON, 0); }
		public TerminalNode MOVE() { return getToken(JupitoreParser.MOVE, 0); }
		public TerminalNode DIRECTION() { return getToken(JupitoreParser.DIRECTION, 0); }
		public TerminalNode HEAT() { return getToken(JupitoreParser.HEAT, 0); }
		public TerminalNode TARGET() { return getToken(JupitoreParser.TARGET, 0); }
		public TerminalNode EQUALS() { return getToken(JupitoreParser.EQUALS, 0); }
		public TerminalNode NUMBER() { return getToken(JupitoreParser.NUMBER, 0); }
		public TerminalNode LEVEL() { return getToken(JupitoreParser.LEVEL, 0); }
		public TerminalNode CALL() { return getToken(JupitoreParser.CALL, 0); }
		public TerminalNode STRING() { return getToken(JupitoreParser.STRING, 0); }
		public TerminalNode SET_NOZZLE() { return getToken(JupitoreParser.SET_NOZZLE, 0); }
		public TerminalNode SET_FILAMENT() { return getToken(JupitoreParser.SET_FILAMENT, 0); }
		public TerminalNode SET_LAYER_HEIGHT() { return getToken(JupitoreParser.SET_LAYER_HEIGHT, 0); }
		public TerminalNode SET_EXTRUSION_MULTIPLIER() { return getToken(JupitoreParser.SET_EXTRUSION_MULTIPLIER, 0); }
		public Layer_statementContext layer_statement() {
			return getRuleContext(Layer_statementContext.class,0);
		}
		public TerminalNode ENABLE_AUTO_EXTRUDE() { return getToken(JupitoreParser.ENABLE_AUTO_EXTRUDE, 0); }
		public Repeat_statementContext repeat_statement() {
			return getRuleContext(Repeat_statementContext.class,0);
		}
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public Brepeat_statementContext brepeat_statement() {
			return getRuleContext(Brepeat_statementContext.class,0);
		}
		public TerminalNode PAUSE() { return getToken(JupitoreParser.PAUSE, 0); }
		public TerminalNode RESPOND() { return getToken(JupitoreParser.RESPOND, 0); }
		public TerminalNode MSG() { return getToken(JupitoreParser.MSG, 0); }
		public TerminalNode RESUME() { return getToken(JupitoreParser.RESUME, 0); }
		public TerminalNode SET_HEATER() { return getToken(JupitoreParser.SET_HEATER, 0); }
		public TerminalNode WAITFORTEMP() { return getToken(JupitoreParser.WAITFORTEMP, 0); }
		public TerminalNode COOLDOWN() { return getToken(JupitoreParser.COOLDOWN, 0); }
		public TerminalNode MOVEEX() { return getToken(JupitoreParser.MOVEEX, 0); }
		public TerminalNode ABSOLUTE() { return getToken(JupitoreParser.ABSOLUTE, 0); }
		public TerminalNode RELATIVE() { return getToken(JupitoreParser.RELATIVE, 0); }
		public TerminalNode TIMEOUT_SET() { return getToken(JupitoreParser.TIMEOUT_SET, 0); }
		public TerminalNode RELATIVEEXTRUSION() { return getToken(JupitoreParser.RELATIVEEXTRUSION, 0); }
		public TerminalNode LOAD_BED_MESH() { return getToken(JupitoreParser.LOAD_BED_MESH, 0); }
		public TerminalNode SET_PRESSURE_ADVANCE() { return getToken(JupitoreParser.SET_PRESSURE_ADVANCE, 0); }
		public TerminalNode RESET_EXTRUDER() { return getToken(JupitoreParser.RESET_EXTRUDER, 0); }
		public TerminalNode DWELL() { return getToken(JupitoreParser.DWELL, 0); }
		public TerminalNode BED_MESH_CALIBRATE() { return getToken(JupitoreParser.BED_MESH_CALIBRATE, 0); }
		public TerminalNode PROBE_CALIBRATE() { return getToken(JupitoreParser.PROBE_CALIBRATE, 0); }
		public TerminalNode SET_SPEED() { return getToken(JupitoreParser.SET_SPEED, 0); }
		public TerminalNode SET_FAN() { return getToken(JupitoreParser.SET_FAN, 0); }
		public TerminalNode PRINTFILE() { return getToken(JupitoreParser.PRINTFILE, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JupitoreListener ) ((JupitoreListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JupitoreListener ) ((JupitoreListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		int _la;
		try {
			setState(192);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case HOME:
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				match(HOME);
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ARROW) {
					{
					setState(74);
					match(ARROW);
					setState(75);
					coordList();
					setState(77);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==SEMICOLON) {
						{
						setState(76);
						match(SEMICOLON);
						}
					}

					}
				}

				setState(81);
				match(NEWLINE);
				}
				break;
			case MOVE:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				match(MOVE);
				setState(83);
				match(DIRECTION);
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ARROW) {
					{
					setState(84);
					match(ARROW);
					setState(85);
					coordList();
					setState(87);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==SEMICOLON) {
						{
						setState(86);
						match(SEMICOLON);
						}
					}

					}
				}
